Avoid navbar hiding parts of the screen after collapse breakpoint.

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -44,6 +44,10 @@ div.isolate-copy {
   padding: 10px;
 }
 
+.navbar {
+  border-radius: 0px;
+}
+
 .nav-shadow {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
 }
@@ -94,10 +98,8 @@ a.my-btn {
 // to make views framework-neutral
 main {
   @extend .container;
-  padding-top: 20px;
   padding-bottom: 20px;
   width: 100%;
-  margin-top: 51px; // Accommodate the navbar
   margin-bottom: 20px;
 }
 
